--- a/workshop1/index.html
+++ b/workshop1/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>หัวเว็บ</h1>
+            <h1>Achira Suntonbooranasuk</h1>
+            <p>อชิระ สุนทรบูรณสุข</p>
         </header>
         <section>
             <h1>เนื้อหา</h1>
