--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
-<html>
-    <head>
-        <title>my website</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>My Dog</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>หัวเว็บ</h1>
+        </header>
+        <section>
+            <h1>เนื้อหา</h1>
+        </section>
+        <aside>
+            <h1>เมนู</h1>
+        </aside>
+    <div class="clearfix"></div>
+        <footer>
+            <h1>ท้ายเว็ป</h1>
+        </footer>
+    </div>
+
+
+
+
+</body>
 </html>
