--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -14,14 +16,42 @@
             <p>อชิระ สุนทรบูรณสุข</p>
         </header>
         <section>
-            <h1>เนื้อหา</h1>
+            <h1>Information Technology KMITL</h1>
+            <img src="1142011.jpg" width="480">
+            <img src="wallpaperflare.com_wallpaper.jpg" width="480">
         </section>
-        <aside>
-            <h1>เมนู</h1>
+        <aside class="con1">
+            <h1>ABOUT ME</h1>
+            <div>
+                <p>"ตื่นมาก็หล่อนอนต่อดีกว่า"</p>
+                <div style="text-align: left; margin-left: 20px">
+                    <li>ชอบทำอาหาร</li>
+                    <li>ชอบเล่นเกม</li>
+                    <li>ชอบมังงะ</li> 
+
+
+                </div>
+            </div>
+            </p>
+            <h2>Skillset</h2>
+            <div>
+                <div style="text-align: left; margin-left: 20px">
+                    <li>Graphic Design</li>
+                    <li>Illustration</li>
+                    <li>Programing</li>
+                    <li>3D model</li>
+                    <li>Motion Graphics</li>
+                    <li>Vidiography</li>
+
+
+                </div>
+            </div>
+            </p>
         </aside>
-    <div class="clearfix"></div>
+        <div class="clearfix"></div>
         <footer>
-            <h1>ท้ายเว็ป</h1>
+            <h1>contact</h1>
+            <a href="https://www.facebook.com/profile.php?id=100021111412092">facebook</a>
         </footer>
     </div>
 
@@ -29,4 +59,5 @@
 
 
 </body>
+
 </html>
